Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003 Simon Josefsson
See the end for copying conditions.

* Version 0.1.12 (unreleased)

** GNU Libc add-on build instructions updated to GNU Libc 2.3.2.

** SASLprep stringprep profile added.

** An online interface to libidn written in PHP added to contrib/web/.

** API and ABI is backwards compatible with the previous version.

* Version 0.1.11 (released 2003-02-26)

** Command line application "idn" is included.
A simple wrapper around the library that allows you to invoke punycode
encoding/decoding and IDNA ToASCII/ToUnicode on the command line.

** Emacs Lisp interface for punycode and IDNA included.
See punycode.el and idna.el.

** API and ABI is backwards compatible with the previous version.

* Version 0.1.10 (released 2003-02-21)

** idna_*_to_ace() and idna_*ace_to_*() are deprecated in favor of
** idna_to_ascii_from_*() and idna_to_unicode_*_from_*() respectively.
The reason was that the old interfaces did not accept the
AllowUnassigned and UseSTD3ASCIIRules flags.  Note that the old
functions are not removed, but will be in the future.

** IPS iSCSI stringprep profile added.

** A new contrib/ directory added.
Currently it contains a Python interface to Libidn, contributed by
Stephane Bortzmeyer.

** idna.h and punycode.h are now installed by "make install".

** API and ABI is backwards compatible with the previous version.

* Version 0.1.9 (released 2003-02-20)

** SASL ANONYMOUS "plain" stringprep profile added.

** XMPP nodeprep profile fixed.

** API and ABI is backwards compatible with the previous version.
For future releases, the NEWS entry will specifically mention whether
the C header API or library ABI backwards compatibility is affected.

* Version 0.1.8 (released 2003-02-14)

** Portability fixes.
This includes not building the API Reference Manual with GTK-DOC by
default, if you want it use configure parameter --enable-gtk-doc after