@@ -1,11 +1,5 @@
 <!doctype book PUBLIC "-//Davenport//DTD DocBook V3.0//EN" [
 <!ENTITY libidn-stringprep SYSTEM "stringprep.sgml">
-<!ENTITY libidn-stringprep-generic SYSTEM "stringprep_generic.sgml">
-<!ENTITY libidn-stringprep-kerberos5 SYSTEM "stringprep_kerberos5.sgml">
-<!ENTITY libidn-stringprep-iscsi SYSTEM "stringprep_iscsi.sgml">
-<!ENTITY libidn-stringprep-nameprep SYSTEM "stringprep_nameprep.sgml">
-<!ENTITY libidn-stringprep-plain SYSTEM "stringprep_plain.sgml">
-<!ENTITY libidn-stringprep-xmpp SYSTEM "stringprep_xmpp.sgml">
 <!ENTITY libidn-punycode SYSTEM "punycode.sgml">
 <!ENTITY libidn-idna SYSTEM "idna.sgml">
 ]>
@@ -54,12 +48,6 @@ Unix platforms (including Solaris, IRIX, AIX, and Tru64) and Windows.
     </para>
 
     &libidn-stringprep;
-    &libidn-stringprep-generic;
-    &libidn-stringprep-iscsi;
-    &libidn-stringprep-kerberos5;
-    &libidn-stringprep-nameprep;
-    &libidn-stringprep-plain;
-    &libidn-stringprep-xmpp;
     &libidn-punycode;
     &libidn-idna;
   </chapter>
